==> CynetisEmbedded/ecdsa_sha256_signature_demo/lib/cyclone_crypto/hardware/stm32mp1xx/stm32mp1xx_crypto_cipher.c <==
#define TRACE_LEVEL CRYPTO_TRACE_LEVEL
#include "stm32mp1xx.h"
#include "stm32mp1xx_hal.h"
#include "core/crypto.h"
#include "hardware/stm32mp1xx/stm32mp1xx_crypto.h"
#include "hardware/stm32mp1xx/stm32mp1xx_crypto_cipher.h"
#include "cipher/cipher_algorithms.h"
#include "cipher_modes/cipher_modes.h"
#include "aead/aead_algorithms.h"
#include "debug.h"

void aesLoadKey(AesContext *context)
{
   uint32_t temp;

   //Read control register
   temp = CRYP2->CR & ~CRYP_CR_KEYSIZE;

   //Check the length of the key
   if(context->nr == 10)
   {
      //10 rounds are required for 128-bit key
      CRYP2->CR = temp | CRYP_CR_KEYSIZE_128B;

      //Set the 128-bit encryption key
      CRYP2->K2LR = context->ek[0];
      CRYP2->K2RR = context->ek[1];
      CRYP2->K3LR = context->ek[2];
      CRYP2->K3RR = context->ek[3];
   }
   else if(context->nr == 12)
   {
      //12 rounds are required for 192-bit key
      CRYP2->CR = temp | CRYP_CR_KEYSIZE_192B;

      //Set the 192-bit encryption key
      CRYP2->K1LR = context->ek[0];
      CRYP2->K1RR = context->ek[1];
      CRYP2->K2LR = context->ek[2];
      CRYP2->K2RR = context->ek[3];
      CRYP2->K3LR = context->ek[4];
      CRYP2->K3RR = context->ek[5];
   }
   else
   {
      //14 rounds are required for 256-bit key
      CRYP2->CR = temp | CRYP_CR_KEYSIZE_256B;

      //Set the 256-bit encryption key
      CRYP2->K0LR = context->ek[0];
      CRYP2->K0RR = context->ek[1];
      CRYP2->K1LR = context->ek[2];
      CRYP2->K1RR = context->ek[3];
      CRYP2->K2LR = context->ek[4];
      CRYP2->K2RR = context->ek[5];
      CRYP2->K3LR = context->ek[6];
      CRYP2->K3RR = context->ek[7];
   }
}

void aesProcessData(AesContext *context, uint8_t *iv, const uint8_t *input,
   uint8_t *output, size_t length, uint32_t mode)
{
   uint32_t temp;

   //Acquire exclusive access to the CRYP module
   osAcquireMutex(&stm32mp1xxCryptoMutex);

   //Configure the data type
   CRYP2->CR = CRYP_CR_DATATYPE_8B;

   //Set encryption key
   aesLoadKey(context);

   //AES-ECB or AES-CBC decryption?
   if((mode & CRYP_CR_ALGODIR) != 0)
   {
      //Configure the key preparation mode by setting the ALGOMODE bits to '111'
      CRYP2->CR |= CRYP_CR_ALGOMODE_AES_KEY;
      //Write the CRYPEN bit to 1
      CRYP2->CR |= CRYP_CR_CRYPEN;

      //Wait until BUSY returns to 0
      while((CRYP2->SR & CRYP_SR_BUSY) != 0)
      {
      }
   }

   //The algorithm must be configured once the key has been prepared
   temp = CRYP2->CR & ~(CRYP_CR_ALGOMODE | CRYP_CR_ALGODIR);
   CRYP2->CR = temp | mode;

   //Valid initialization vector?
   if(iv != NULL)
   {
      //Set initialization vector
      CRYP2->IV0LR = LOAD32BE(iv);
      CRYP2->IV0RR = LOAD32BE(iv + 4);
      CRYP2->IV1LR = LOAD32BE(iv + 8);
      CRYP2->IV1RR = LOAD32BE(iv + 12);
   }

   //Flush the input and output FIFOs
   CRYP2->CR |= CRYP_CR_FFLUSH;
   //Enable the cryptographic processor
   CRYP2->CR |= CRYP_CR_CRYPEN;

   //Process data
   while(length >= AES_BLOCK_SIZE)
   {
      //Wait for the input FIFO to be ready to accept data
      while((CRYP2->SR & CRYP_SR_IFNF) == 0)
      {
      }

      //Write the input FIFO
      CRYP2->DIN = LOAD32LE(input);
      CRYP2->DIN = LOAD32LE(input + 4);
      CRYP2->DIN = LOAD32LE(input + 8);
      CRYP2->DIN = LOAD32LE(input + 12);

      //Wait for the output to be ready
      while((CRYP2->SR & CRYP_SR_OFNE) == 0)
      {
      }

      //Read the output FIFO
      temp = CRYP2->DOUT;
      STORE32LE(temp, output);
      temp = CRYP2->DOUT;
      STORE32LE(temp, output + 4);
      temp = CRYP2->DOUT;
      STORE32LE(temp, output + 8);
      temp = CRYP2->DOUT;
      STORE32LE(temp, output + 12);

      //Next block
      input += AES_BLOCK_SIZE;
      output += AES_BLOCK_SIZE;
      length -= AES_BLOCK_SIZE;
   }

   //Process final block of data
   if(length > 0)
   {
      uint32_t buffer[4];

      //Copy partial block
      osMemset(buffer, 0, AES_BLOCK_SIZE);
      osMemcpy(buffer, input, length);

      //Wait for the input FIFO to be ready to accept data
      while((CRYP2->SR & CRYP_SR_IFNF) == 0)
      {
      }

      //Write input block
      CRYP2->DIN = buffer[0];
      CRYP2->DIN = buffer[1];
      CRYP2->DIN = buffer[2];
      CRYP2->DIN = buffer[3];

      //Wait for the output to be ready
      while((CRYP2->SR & CRYP_SR_OFNE) == 0)
      {
      }

      //Read output block
      buffer[0] = CRYP2->DOUT;
      buffer[1] = CRYP2->DOUT;
      buffer[2] = CRYP2->DOUT;
      buffer[3] = CRYP2->DOUT;

      //Copy partial block
      osMemcpy(output, buffer, length);
   }

   //Valid initialization vector?
   if(iv != NULL)
   {
      //Update the value of the initialization vector
      temp = CRYP2->IV0LR;
      STORE32BE(temp, iv);
      temp = CRYP2->IV0RR;
      STORE32BE(temp, iv + 4);
      temp = CRYP2->IV1LR;
      STORE32BE(temp, iv + 8);
      temp = CRYP2->IV1RR;
      STORE32BE(temp, iv + 12);
   }

   //Disable the cryptographic processor by clearing the CRYPEN bit
   CRYP2->CR = 0;

   //Release exclusive access to the CRYP module
   osReleaseMutex(&stm32mp1xxCryptoMutex);
}

error_t ecbEncrypt(const CipherAlgo *cipher, void *context,
   const uint8_t *p, uint8_t *c, size_t length)
{
   error_t error;

   //Initialize status code
   error = NO_ERROR;

#if (DES_SUPPORT == ENABLED)
   //DES cipher algorithm?
   if(cipher == DES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         desProcessData(context, NULL, p, c, length, CRYP_CR_ALGOMODE_DES_ECB);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (DES3_SUPPORT == ENABLED)
   //Triple DES cipher algorithm?
   if(cipher == DES3_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES3_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         des3ProcessData(context, NULL, p, c, length, CRYP_CR_ALGOMODE_TDES_ECB);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (AES_SUPPORT == ENABLED)
   //AES cipher algorithm?
   if(cipher == AES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % AES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         aesProcessData(context, NULL, p, c, length, CRYP_CR_ALGOMODE_AES_ECB);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
   //Unknown cipher algorithm?
   {
      //ECB mode operates in a block-by-block fashion
      while(length >= cipher->blockSize)
      {
         //Encrypt current block
         cipher->encryptBlock(context, p, c);

         //Next block
         p += cipher->blockSize;
         c += cipher->blockSize;
         length -= cipher->blockSize;
      }

      //The length of the payload must be a multiple of the block size
      if(length != 0)
      {
         error = ERROR_INVALID_LENGTH;
      }
   }

   //Return status code
   return error;
}

error_t cbcEncrypt(const CipherAlgo *cipher, void *context,
   uint8_t *iv, const uint8_t *p, uint8_t *c, size_t length)
{
   error_t error;

   //Initialize status code
   error = NO_ERROR;

#if (DES_SUPPORT == ENABLED)
   //DES cipher algorithm?
   if(cipher == DES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         desProcessData(context, iv, p, c, length, CRYP_CR_ALGOMODE_DES_CBC);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (DES3_SUPPORT == ENABLED)
   //Triple DES cipher algorithm?
   if(cipher == DES3_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % DES3_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         des3ProcessData(context, iv, p, c, length, CRYP_CR_ALGOMODE_TDES_CBC);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
#if (AES_SUPPORT == ENABLED)
   //AES cipher algorithm?
   if(cipher == AES_CIPHER_ALGO)
   {
      //Check the length of the payload
      if(length == 0)
      {
         //No data to process
      }
      else if((length % AES_BLOCK_SIZE) == 0)
      {
         //Encrypt payload data
         aesProcessData(context, iv, p, c, length, CRYP_CR_ALGOMODE_AES_CBC);
      }
      else
      {
         //The length of the payload must be a multiple of the block size
         error = ERROR_INVALID_LENGTH;
      }
   }
   else
#endif
   //Unknown cipher algorithm?
   {
      size_t i;

      //CBC mode operates in a block-by-block fashion
      while(length >= cipher->blockSize)
      {
         //XOR input block with IV contents
         for(i = 0; i < cipher->blockSize; i++)
         {
            c[i] = p[i] ^ iv[i];
         }

         //Encrypt the current block based upon the output of the previous
         //encryption
         cipher->encryptBlock(context, c, c);

         //Update IV with output block contents
         osMemcpy(iv, c, cipher->blockSize);

         //Next block
         p += cipher->blockSize;
         c += cipher->blockSize;
         length -= cipher->blockSize;
      }

      //The length of the payload must be a multiple of the block size
      if(length != 0)
      {
         error = ERROR_INVALID_LENGTH;
      }
   }

   //Return status code
   return error;
}

void gcmProcessData(AesContext *context, const uint8_t *iv,
   const uint8_t *a, size_t aLen, const uint8_t *input, uint8_t *output,
   size_t length, uint8_t *t, uint32_t mode)
{
   size_t n;
   uint64_t m;
   uint32_t temp;
   uint32_t buffer[4];

   //Acquire exclusive access to the AES module
   osAcquireMutex(&stm32mp1xxCryptoMutex);

   //Configure the data type
   CRYP2->CR = CRYP_CR_DATATYPE_8B;

   //Select the GCM chaining mode by programming ALGOMODE bits to '01000'
   temp = CRYP2->CR & ~CRYP_CR_ALGOMODE;
   CRYP2->CR = temp | CRYP_CR_ALGOMODE_AES_GCM;

   //Configure GCM_CCMPH bits to '00' to start the GCM init phase
   temp = CRYP2->CR & ~CRYP_CR_GCM_CCMPH;
   CRYP2->CR = temp | CRYP_CR_GCM_CCMPH_INIT;

   //Set encryption key
   aesLoadKey(context);

   //Set initialization vector
   CRYP2->IV0LR = LOAD32BE(iv);
   CRYP2->IV0RR = LOAD32BE(iv + 4);
   CRYP2->IV1LR = LOAD32BE(iv + 8);
   CRYP2->IV1RR = 2;

   //Set CRYPEN bit to 1 to start the calculation of the HASH key
   CRYP2->CR |= CRYP_CR_CRYPEN;

   //Wait for the CRYPEN bit to be cleared to 0 before moving on to the
   //next phase
   while((CRYP2->CR & CRYP_CR_CRYPEN) != 0)
   {
   }

   //Configure GCM_CCMPH bits to '01' to start GCM header phase
   temp = CRYP2->CR & ~CRYP_CR_GCM_CCMPH;
   CRYP2->CR = temp | CRYP_CR_GCM_CCMPH_HEADER;

   //Flush the input and output FIFOs
   CRYP2->CR |= CRYP_CR_FFLUSH;
   //Set the CRYPEN bit to 1 to start accepting data
   CRYP2->CR |= CRYP_CR_CRYPEN;

   //Process additional authenticated data
   for(n = aLen; n >= AES_BLOCK_SIZE; n -= AES_BLOCK_SIZE)
   {
      //Wait for the input FIFO to be ready to accept data
      while((CRYP2->SR & CRYP_SR_IFNF) == 0)
      {
      }

      //Write the input FIFO
      CRYP2->DIN = LOAD32LE(a);
      CRYP2->DIN = LOAD32LE(a + 4);
      CRYP2->DIN = LOAD32LE(a + 8);
      CRYP2->DIN = LOAD32LE(a + 12);

      //Next block
      a += AES_BLOCK_SIZE;
   }

   //Process final block of additional authenticated data
   if(n > 0)
   {
      //Copy partial block
      osMemset(buffer, 0, AES_BLOCK_SIZE);
      osMemcpy(buffer, a, n);

      //Wait for the input FIFO to be ready to accept data
      while((CRYP2->SR & CRYP_SR_IFNF) == 0)
      {
      }

      //Write the input FIFO
      CRYP2->DIN = buffer[0];
      CRYP2->DIN = buffer[1];
      CRYP2->DIN = buffer[2];
      CRYP2->DIN = buffer[3];
   }

   //Once all header data have been supplied, wait until the BUSY bit is
   //cleared
   while((CRYP2->SR & CRYP_SR_BUSY) != 0)
   {
   }

   //Set the CRYPEN bit to 0
   CRYP2->CR &= ~CRYP_CR_CRYPEN;

   //Configure GCM_CCMPH bits to '10' to start GCM payload phase
   temp = CRYP2->CR & ~CRYP_CR_GCM_CCMPH;
   CRYP2->CR = temp | CRYP_CR_GCM_CCMPH_PAYLOAD;

   //Select the algorithm direction by using the ALGODIR bit
   temp = CRYP2->CR & ~CRYP_CR_ALGODIR;
   CRYP2->CR |= mode;

   //Set the CRYPEN bit to 1 to start accepting data
   CRYP2->CR |= CRYP_CR_CRYPEN;

   //Process data
   for(n = length; n >= AES_BLOCK_SIZE; n -= AES_BLOCK_SIZE)
   {
      //Wait for the input FIFO to be ready to accept data
      while((CRYP2->SR & CRYP_SR_IFNF) == 0)
      {
      }

      //Write the input FIFO
      CRYP2->DIN = LOAD32LE(input);
      CRYP2->DIN = LOAD32LE(input + 4);
      CRYP2->DIN = LOAD32LE(input + 8);
      CRYP2->DIN = LOAD32LE(input + 12);

      //Wait for the output to be ready
      while((CRYP2->SR & CRYP_SR_OFNE) == 0)
      {
      }

      //Read the output FIFO
      temp = CRYP2->DOUT;
      STORE32LE(temp, output);
      temp = CRYP2->DOUT;
      STORE32LE(temp, output + 4);
      temp = CRYP2->DOUT;
      STORE32LE(temp, output + 8);
      temp = CRYP2->DOUT;
      STORE32LE(temp, output + 12);

      //Next block
      input += AES_BLOCK_SIZE;
      output += AES_BLOCK_SIZE;
   }

   //Process final block of data
   if(n > 0)
   {
      //Copy partial block
      osMemset(buffer, 0, AES_BLOCK_SIZE);
      osMemcpy(buffer, input, n);

      //Specify the number of padding bytes in the last block
      temp = CRYP2->CR & ~CRYP_CR_NPBLB;
      CRYP2->CR = temp | ((AES_BLOCK_SIZE - n) << CRYP_CR_NPBLB_Pos);

      //Wait for the input FIFO to be ready to accept data
      while((CRYP2->SR & CRYP_SR_IFNF) == 0)
      {
      }

      //Write the input FIFO
      CRYP2->DIN = buffer[0];
      CRYP2->DIN = buffer[1];
      CRYP2->DIN = buffer[2];
      CRYP2->DIN = buffer[3];

      //Wait for the output to be ready
      while((CRYP2->SR & CRYP_SR_OFNE) == 0)
      {
      }

      //Read the output FIFO
      buffer[0] = CRYP2->DOUT;
      buffer[1] = CRYP2->DOUT;
      buffer[2] = CRYP2->DOUT;
      buffer[3] = CRYP2->DOUT;

      //Copy partial block
      osMemcpy(output, buffer, n);
   }

   //Once all payload data have been supplied, wait until the BUSY flag is
   //cleared
   while((CRYP2->SR & CRYP_SR_BUSY) != 0)
   {
   }

   //Configure GCM_CCMPH bits to '11' to start GCM final phase
   temp = CRYP2->CR & ~CRYP_CR_GCM_CCMPH;
   CRYP2->CR = temp | CRYP_CR_GCM_CCMPH_FINAL;

   //Write the input into the CRYP_DIN register 4 times. The input must
   //contain the number of bits in the header (64 bits) concatenated with
   //the number of bits in the payload (64 bits)
   m = aLen * 8;
   CRYP2->DIN = htole32(m >> 32);
   CRYP2->DIN = htole32(m);
   m = length * 8;
   CRYP2->DIN = htole32(m >> 32);
   CRYP2->DIN = htole32(m);

   //Wait until the OFNE flag is set to 1 in the CRYP_SR register
   while((CRYP2->SR & CRYP_SR_OFNE) == 0)
   {
   }

   //Read the CRYP_DOUT register 4 times. The output corresponds to the
   //authentication tag
   temp = CRYP2->DOUT;
   STORE32LE(temp, t);
   temp = CRYP2->DOUT;
   STORE32LE(temp, t + 4);
   temp = CRYP2->DOUT;
   STORE32LE(temp, t + 8);
   temp = CRYP2->DOUT;
   STORE32LE(temp, t + 12);

   //Disable the cryptographic processor by clearing the CRYPEN bit
   CRYP2->CR = 0;

   //Release exclusive access to the AES module
   osReleaseMutex(&stm32mp1xxCryptoMutex);
}
